--- a/settings.json
+++ b/settings.json
@@ -6,5 +6,6 @@
     "use_tinyllama": true,
     "openai_model": "gpt-3.5-turbo",
     "openai_json_model": "gpt-3.5-turbo-1106",
-    "use_moondream": true
+    "use_moondream": true,
+    "use_nomic": true
 }
