--- a/settings.json
+++ b/settings.json
@@ -1,10 +1,10 @@
 {
     "use_cache": false,
-    "use_sdc": true,
+    "use_sd15": true,
     "dalle_model": "dall-e-2",
     "use_sd_variation": true,
     "use_speecht5": true,
-    "use_tinyllama": true,
+    "use_llama3": true,
     "openai_model": "gpt-3.5-turbo",
     "openai_json_model": "gpt-3.5-turbo-1106",
     "use_moondream": true,
