--- a/settings.json
+++ b/settings.json
@@ -3,7 +3,7 @@
     "use_sd15": true,
     "dalle_model": "dall-e-2",
     "use_sd_variation": true,
-    "use_speecht5": true,
+    "use_bark": true,
     "use_llama3": true,
     "openai_model": "gpt-3.5-turbo",
     "openai_json_model": "gpt-3.5-turbo-1106",
