--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,7 @@
     "dalle_model": "dall-e-2",
     "use_sd_variation": true,
     "use_bark": true,
-    "use_llama3": true,
+    "use_phi3": true,
     "openai_model": "gpt-3.5-turbo",
     "openai_json_model": "gpt-3.5-turbo-1106",
     "use_moondream": true,
